# gridding

./: .gitignore  README.md  meson.build  requirements.txt
.github/workflows/: ci.yml
python/: meson.build
python/tests/: test_echogrids.py
python/tests/forwardgridder/: test_compare_forwardgridder.py  test_foorwardgridder_init.py  test_forwardgridder_indexing.py  test_forwardgridder_interpolating.py
python/tests/functions/: test_compare_gridfunctions.py  test_gridfunctions.py
python/themachinethatgoesping/: __init__.py
python/themachinethatgoesping/echogrids/: __init__.py  echogrid.py
python/themachinethatgoesping/echogrids/functions/: __init__.py  gridfunctions.py
python/themachinethatgoesping/gridding/: __init__.py  echogrid.py  foorwardgridder.py  forwardgridder.py  forwardgridderlegacy.py  forwardgridderlegacynew.py  gridder.py
python/themachinethatgoesping/gridding/functions/: __init__.py  gridfunctions.py  helperfunctions.py
pythonthemachinethatgoesping/gridding/: __init__.py
subprojects/: .gitignore  meta.wrap
tests/pytests/echogrids/: test_echogrids.py  test_template.py
tests/pytests/echogrids/functions/: test_gridfunctions.py
tests/pytests/gridding/: test_echogrids.py
tests/pytests/gridding/forwardgridder/: test_forwardgridder_interpolating.py
tests/pytests/gridding/functions/: test_gridfunctions.py
tutorials/: echogrids.ipynb  forwardgridder.ipynb
tutorials/.ipynb_checkpoints/: echogrids-checkpoint.ipynb
