# SPDX-FileCopyrightText: 2022 Peter Urban, Ghent University
#
# SPDX-License-Identifier: CC0-1.0

# --- Project ---
# Define project meta data
project(
  'themachinethatgoesping_echogrids',
  'cpp',
  license: 'MPL-2.0',

  version: '0.1.0',
  default_options: ['warning_level=2', 'buildtype=release', 'cpp_std=c++17'],
  meson_version: '>=0.62' #force new meson version to limit necessary testing
)

projectnamespace = 'themachinethatgoesping'
 
# add python src
subdir('python')

